# ChangeLog for dev-perl/Module-Signature
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Module-Signature/ChangeLog,v 1.41 2013/03/25 20:49:01 ago Exp $

  25 Mar 2013; Agostino Sarubbo <ago@gentoo.org>
  Module-Signature-0.700.0.ebuild:
  Stable for x86, wrt bug #456578

  25 Mar 2013; Agostino Sarubbo <ago@gentoo.org>
  Module-Signature-0.700.0.ebuild:
  Stable for amd64, wrt bug #456578

  07 Feb 2013; Ulrich Müller <ulm@gentoo.org> Module-Signature-0.680.0.ebuild,
  Module-Signature-0.700.0.ebuild:
  Move Creative Commons licenses to shorter names.

  06 Jan 2013; Torsten Veller <tove@gentoo.org>
  -Module-Signature-0.690.0.ebuild:
  Cleanup

*Module-Signature-0.700.0 (08 Dec 2012)

  08 Dec 2012; Torsten Veller <tove@gentoo.org>
  +Module-Signature-0.700.0.ebuild:
  Version bump

*Module-Signature-0.690.0 (04 Nov 2012)

  04 Nov 2012; Torsten Veller <tove@gentoo.org>
  +Module-Signature-0.690.0.ebuild:
  Version bump

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  18 Feb 2012; Torsten Veller <tove@gentoo.org> -Module-Signature-0.66.ebuild:
  Cleanup

  04 Oct 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  Module-Signature-0.680.0.ebuild:
  x86 stable wrt bug #385023

  04 Oct 2011; Tony Vroon <chainsaw@gentoo.org>
  Module-Signature-0.680.0.ebuild:
  Marked stable on AMD64 based on arch testing by Agostino "ago" Sarubbo, Ian
  "idella4" Delaney & Elijah "Armageddon" El Lazkani in bug #385023.

*Module-Signature-0.680.0 (13 May 2011)

  13 May 2011; Torsten Veller <tove@gentoo.org>
  +Module-Signature-0.680.0.ebuild:
  Version bump

  24 Apr 2011; Fabian Groffen <grobian@gentoo.org>
  Module-Signature-0.66.ebuild:
  Marked ~x86-solaris, bug #296509

  14 Jan 2011; Torsten Veller <tove@gentoo.org> -Module-Signature-0.55.ebuild,
  -Module-Signature-0.64.ebuild, -Module-Signature-0.65.ebuild:
  Cleanup
