@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Module-Signature
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Module-Signature/ChangeLog,v 1.41 2013/03/25 20:49:01 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Module-Signature/ChangeLog,v 1.42 2013/08/20 10:56:23 pinkbyte Exp $
+
+*Module-Signature-0.730.0 (20 Aug 2013)
+
+  20 Aug 2013; Sergey Popov <pinkbyte@gentoo.org>
+  +Module-Signature-0.730.0.ebuild:
+  Version bump, wrt bug #472428
 
   25 Mar 2013; Agostino Sarubbo <ago@gentoo.org>
   Module-Signature-0.700.0.ebuild:
